# pypi-timemachine

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_workflows.yml
pypi_timemachine/: __init__.py  __main__.py  core.py
pypi_timemachine/tests/: test_basic.py
