[metadata]
name = pypi-timemachine
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
description = Run a PyPI server from the past
long_description = file: README.rst
url = https://github.com/astrofrog/pypi-timemachine

[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires =
    click
    fastapi
    httpx
    importlib-metadata; python_version < "3.8"
    simple-repository>=0.8.2
    simple-repository-server>=0.8.1

[options.entry_points]
console_scripts =
    pypi-timemachine = pypi_timemachine.core:main

[options.extras_require]
test =
    pytest
